<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.aevur</groupId>
    <artifactId>movie-platform</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Movie Platform System</name>

    <!-- 🔥 Centralized Versions -->
    <properties>
        <java.version>17</java.version>
        <spring.boot.version>3.3.2</spring.boot.version>
        <spring.cloud.version>2023.0.3</spring.cloud.version>
    </properties>

    <!-- 🔥 Dependency Management -->
    <dependencyManagement>
        <dependencies>

            <!-- Spring Boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Cloud -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.aevur</groupId>
                <artifactId>common-lib</artifactId>
                <version>1.0.0</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <!-- 🔥 Modules -->
    <modules>
        <module>common-lib</module>
        <module>api-gateway</module>
        <module>config-server</module>
        <module>discovery-service</module>

        <module>services/movie-service</module>
        <module>services/user-service</module>
        <module>services/history-service</module>
        <module>services/notification-service</module>
    </modules>


</project>